cf_02_SG_TT.yml
AWSTemplateFormatVersion: 2010-09-09
Description: Create a Security group for specified VPC and subnets

Resources:
 7daysWebServerSG:
  Type: AWS::EC2::SecurityGroup
  Properties:
   GroupDescription: Allow access on ports 80, 3389 and 22
   GroupName: 7daysWebServerSG
   SecurityGroupIngress:
    - IpProtocol: tcp
      FromPort: 80
      ToPort: 80
      CidrIp: 0.0.0.0/0
    - IpProtocol: tcp
      FromPort: 22
      ToPort: 22
      CidrIp: 0.0.0.0/0
    - IpProtocol: tcp
      FromPort: 3389
      ToPort: 3389
      CidrIp: 0.0.0.0/0
   Tags:
    - Key: Name
      Value: 7daysWebServerSG
    - Key: Purpose
      Value: 7days Cloud Security Group for web server
    - Key: Owner
      Value: 7days
    - Key: Project
      Value: 7days Cloud Project
   VpcId: vpc-0072f1135f3693c5d # Check if VPC ID is present and accounted for
   
 7daysWebServerHTTPS:
  Type: AWS::EC2::SecurityGroup
  Properties:
   GroupDescription: Allow access on ports 443
   GroupName: 7daysWebServerHTTPSSG
   SecurityGroupIngress:
    - IpProtocol: tcp
      FromPort: 443
      ToPort: 443
      CidrIp: 0.0.0.0/0
   Tags:
    - Key: Name
      Value: 7daysWebServerHTTPS
    - Key: Purpose
      Value: 7days Cloud Security Group for web server HTTPS
    - Key: Owner
      Value: 7days
    - Key: Project
      Value: 7days Cloud Project
   VpcId: vpc-0072f1135f3693c5d # Check if VPC ID is present and accounted for
   
 7daysDatabaseSG:
  Type: AWS::EC2::SecurityGroup
  Properties:
   GroupDescription: Allow to access to MySQL database on RDS
   GroupName: 7daysDatabaseSG
   SecurityGroupIngress:
    - IpProtocol: tcp
      FromPort: 3306
      ToPort: 3306
      SourceSecurityGroupId: !Ref 7daysWebServerSG
   Tags:
    - Key: Name
      Value: 7daysDatabaseSG
    - Key: Purpose
      Value: 7days Cloud Security Group for Database
    - Key: Owner
      Value: 7days
    - Key: Project
      Value: 7days Cloud Project
   VpcId: vpc-0072f1135f3693c5d # Check if VPC ID is present and accounted for

Outputs:
 7daysWebServerSG:
  Description: Export webserver security group ID
  Value: !Ref 7daysWebServerSG
  Export:
   Name:
    'Fn::Sub': ${AWS::StackName}-7daysWebServerSG
    
 7daysWebServerHTTPS:
  Description: Export webserver security group ID
  Value: !Ref 7daysWebServerHTTPS
  Export:
   Name:
    'Fn::Sub': ${AWS::StackName}-7daysWebServerHTTPSSG
    
 7daysDatabaseSG:
  Description: Export webserver security group ID
  Value: !Ref 7daysDatabaseSG
  Export:
   Name:
    'Fn::Sub': ${AWS::StackName}-7daysDatabaseSG
